--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+    "sdkVersion": "25.0.0",
+    "name": "HiRed!",
+    "icon": "./assets/img/tripad.png",
+    "version": "1.0.0",
+    "slug": "HiRed",
+    "ios": {
+      "bundleIdentifier": "com.danielgg.hired"
+    },
+    "android": {
+      "package": "com.danielgg.hired"
+    }
   }
 }
